deployments/server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-ping-pong-service
spec:
  selector:
    app: go-example
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
