deployments/server.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-example-nginx
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Request-Id: $req_id";
spec:
  ingressClassName: nginx
  rules:
  - host: go-example.schlichting.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-ping-pong-service
            port:
              number: 80
